--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
 <html>
     <head>
 
-        <title>Shader Editor</title>
+        <title>Extension Editor</title>
 
         <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 
